--- a/Tower Defense/index.html
+++ b/Tower Defense/index.html
@@ -9,17 +9,14 @@
 				var controls_text = new sjs.Text("Controls", 30, "red");
 				controls_text.moveTo(70,250);
 
-				var left_text = new sjs.Text("Left Key- Move Left", 18, "black");
-				left_text.moveTo(275,275);
+				var left_text = new sjs.Text("Left Key- Move Screen Left", 18, "black");
+				left_text.moveTo(255,275);
 
-				var right_text = new sjs.Text("Right Key- Move Right", 18, "black");
-				right_text.moveTo(275,295);
+				var right_text = new sjs.Text("Right Key- Move Screen Right", 18, "black");
+				right_text.moveTo(255,295);
 
-				var up_text = new sjs.Text("Up Key- Jump", 18, "black");
-				up_text.moveTo(275,315);
-
-				var down_text = new sjs.Text("Down Key- Shoot Lasers", 18, "black");
-				down_text.moveTo(275,335);
+				var up_text = new sjs.Text("Left Click, Then Drag for Towers", 18, "black");
+				up_text.moveTo(255,315);
 
 				var arrows = new sjs.Image("Images/arrow_keys.png")
 				arrows.setSize(100,100);
