--- a/Tower Defense/level2.html
+++ b/Tower Defense/level2.html
@@ -199,7 +199,7 @@
 						setInterval(function(){
 							x.stop(); 
 							x.pushUp(12);
-							x.bounce;
+							x.bounce();
 						},1500);
 					}
 					setTimeout(function(){ 
