--- a/Tower Defense/level1.html
+++ b/Tower Defense/level1.html
@@ -7,7 +7,7 @@
 				sjs.open("target",1040,650);
 
 				//Background Object and Properties
-				var background = new sjs.Image("Images/background.png");
+				var background = new sjs.Image("Images/background.jpg");
 				background.setSize(2400,sjs.getHeight());
 
 				var view = new sjs.Image("");
