--- a/Tower Defense/level1.html
+++ b/Tower Defense/level1.html
@@ -53,7 +53,10 @@
 			}//End Start
 		</script> 
 	</head> 
-	<body onload="start()"> 
+	<body onload="start()">
+		<center>
+			<img src="Images/block.png" class="images" onclick="blocker()"> 
+		</center> 
 		<div id="target" style="overflow:hidden; background-color:green; margin:auto;"></div> 
 	</body> 
 </html> 
