--- a/Tower Defense/level1.html
+++ b/Tower Defense/level1.html
@@ -89,7 +89,7 @@
 						blocker.setGravity();
 					});
 				}else{
-					var no_bolts = new sjs.Text("Your bolts Lag! Collect More bolts!",20,"red");
+					var no_bolts = new sjs.Text("You're a fucking retard, get more fucking bolts already you piece of shit cuck!!!",20,"red");
 					no_bolts.center().offset(-sjs.gx,-200);
 					setTimeout(function(){
 						no_bolts.destroy(); 
